fix: Increase CSS specificity for full-width alignment in editor
Adds higher specificity selector (.block-editor-block-list__layout.is-root-container) to override WordPress core styles that were preventing full-width blocks from displaying edge-to-edge in the editor.

Changes:
- Updated editor.scss alignfull selectors to match WordPress core specificity
- Ensures negative margins are applied correctly for container blocks with align="full"
- Affects: Stack, Flex, and Grid blocks in editor only

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -64,10 +64,11 @@
 /**
  * Fix alignfull behavior for our container blocks in the editor
  * Ensures full-width blocks extend edge-to-edge correctly
+ * CRITICAL: High specificity required to override WordPress core styles
  */
-.has-global-padding > [data-type="designsetgo/grid"][data-align="full"],
-.has-global-padding > [data-type="designsetgo/flex"][data-align="full"],
-.has-global-padding > [data-type="designsetgo/stack"][data-align="full"] {
+.block-editor-block-list__layout.is-root-container.has-global-padding > [data-type="designsetgo/grid"][data-align="full"],
+.block-editor-block-list__layout.is-root-container.has-global-padding > [data-type="designsetgo/flex"][data-align="full"],
+.block-editor-block-list__layout.is-root-container.has-global-padding > [data-type="designsetgo/stack"][data-align="full"] {
 	margin-right: calc(var(--wp--style--root--padding-right) * -1) !important;
 	margin-left: calc(var(--wp--style--root--padding-left) * -1) !important;
 }
